--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,145 +1,107 @@
-/* @import url(//db.onlinewebfonts.com/c/50cd2aad9c8f35800bb6beac3ad42f16?family=Azonix);
-@import url('http://fonts.cdnfonts.com/css/austhind');
-@import url('http://fonts.cdnfonts.com/css/philosopher');
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #000000 !important;
-    margin: 0;
-    padding: 0;
-}
-
-img {
-    max-width: 100%;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    background-repeat: no-repeat;
-    background-color: #000000 !important;
-}
-
-.menu {
-    background-color: #000000 !important;
-}
-
-.linkus-logo-text {
-    font-family: Azonix;
-    color: white !important;
-}
-
-.linkus-logo-text-bottom {
-    font-family: Austhind;
-}
-
-.menu-li a {
-    font-family: philosopher;
-}
-
-.banner1 {
-    position: absolute;
-    top: 100px;
-}
-
-.text-pink {
-    color: rgb(241, 83, 136);
-}
-
-.tag-line {
-    font-family: Azonix;
-    font-size: 4.5rem;
-    margin: auto;
-    padding-top: 150px;
-    padding-left: 150px;
-}
-
-.polygon-pink img {
-    float: right;
-    align-items: flex-end;
-    margin-left: auto;
-    margin-right: 0;
-    width: 20vh;
-    height: 30vh;
-}
-
-.shirt-tie img {
-    width: 100vh;
-    height: 100vh;
-    padding-top: 150px;
-} */
-
-@font-face {
-  font-family: Austhind;
-  src: url("./../media/fonts/austhind/Austhind.otf") format("opentype");
-}
-
-@font-face {
-  font-family: Azonix;
-  src: url("./../media/fonts/azonix/Azonix.otf") format("opentype");
-}
-
-@font-face {
-  font-family: Philosopher;
-  src: url("./../media/fonts/philosopher/Philosopher.otf") format("opentype");
-}
-
-@font-face {
-  font-family: Raleway;
-  src: url("./../media/fonts/raleway/Raleway-Regular.otf") format("opentype");
-}
-
-body {
-  background-color: #000000;
-  color: #ffffff;
-  font-family: Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
-}
-
-section {
-  background-color: #000000;
-  color: #ffffff;
-}
-
-.ff-azonix {
-  font-family: Azonix, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
-}
-
-.ff-austhind {
-  font-family: Austhind, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
-}
-
-.ff-navbar {
-  font-family: Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
-}
-
-.ff-philosopher {
-  font-family: Philosopher, Helvetica, "Trebuchet MS", Verdana, Arial,
-    sans-serif;
-}
-
-.ff-raleway {
-  font-family: Raleway, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
-}
-
-.img-mw380 {
-  width: 90%;
-  max-width: 23.75rem;
-}
-
-.h4p5 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2;
-  font-size: calc(1.4rem + 0.1vw);
-}
-
-.fs-5rem {
-  font-size: calc(3rem + 1.5vw);
-}
+          .menu-li {
+              margin-left: auto !important;
+          }
+          
+          .fostering span {
+              float: right;
+          }
+          
+          .tag-line {
+              font-size: 5rem;
+          }
+          
+          .shirt-tie img {
+              height: 500px;
+          }
+          
+          .text-pink {
+              color: deeppink;
+          }
+          
+          @font-face {
+              font-family: Austhind;
+              src: url("./../media/fonts/austhind/Austhind.otf") format("opentype");
+          }
+          
+          @font-face {
+              font-family: Azonix;
+              src: url("./../media/fonts/azonix/Azonix.otf") format("opentype");
+          }
+          
+          @font-face {
+              font-family: Philosopher;
+              src: url("./../media/fonts/philosopher/Philosopher.otf") format("opentype");
+          }
+          
+          @font-face {
+              font-family: Raleway;
+              src: url("./../media/fonts/raleway/Raleway-Regular.otf") format("opentype");
+          }
+          
+          body {
+              background-color: #000000;
+              color: #ffffff;
+              font-family: Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          section {
+              background-color: #000000;
+              color: #ffffff;
+          }
+          
+          .ff-azonix {
+              font-family: Azonix, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          .ff-austhind {
+              font-family: Austhind, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          .ff-navbar {
+              font-family: Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          .ff-philosopher {
+              font-family: Philosopher, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          .ff-raleway {
+              font-family: Raleway, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
+          }
+          
+          .img-mw380 {
+              width: 90%;
+              max-width: 23.75rem;
+          }
+          
+          .h4p5 {
+              margin-top: 0;
+              margin-bottom: 0.5rem;
+              font-weight: 500;
+              line-height: 1.2;
+              font-size: calc(1.4rem + 0.1vw);
+          }
+          
+          .fs-5rem {
+              font-size: calc(3rem + 1.5vw);
+          }
+          
+          @media screen and (max-width: 992px) {
+              .tag-line {
+                  font-size: 3.5rem;
+                  padding-top: 20px;
+              }
+              .shirt-tie img {
+                  height: 400px;
+              }
+          }
+          
+          @media screen and (max-width: 600px) {
+              .tag-line {
+                  font-size: 3rem;
+              }
+              .shirt-tie img {
+                  height: 400px;
+                  padding-top: 50px;
+              }
+          }
