--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,6 +106,14 @@ section {
   color: #ffffff;
 }
 
+.primary-pink {
+  color: #db135d;
+}
+
+.primary-blue {
+  color: #00e2f9;
+}
+
 .ff-azonix {
   font-family: Azonix, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
 }
@@ -152,4 +160,19 @@ section {
 #our-expertise img {
   height: auto;
   max-height: 6rem;
+}
+
+#explore-horizons #social .social-icon {
+  height: calc(1.5rem + 0.4vw);
+}
+
+#social .display-1 {
+  font-size: calc(1.7rem + 0.4vw);
+}
+#social .display-2 {
+  font-size: calc(1.7rem + 0.4vw);
+}
+
+.w-35 {
+  width: 35% !important;
 }
