--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,3 +153,13 @@ section {
   height: auto;
   max-height: 6rem;
 }
+
+#reach-us-out .form-control,
+#reach-us-out .form-select {
+  border-bottom: 1px solid #00e2f9;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  background-color: #000;
+  color: #a1a1a1;
+}
