--- a/CSS/style.css
+++ b/CSS/style.css
@@ -157,9 +157,14 @@ section {
   color: #00e2f9;
 }
 
-#our-expertise img {
+#our-expertise .our-expertise-icons {
   height: auto;
   max-height: 6rem;
+}
+
+#our-expertise img.home-our-expertise-triangle {
+  height: auto;
+  max-height: 16rem;
 }
 
 #reach-us-out .form-control,
