--- a/CSS/style.css
+++ b/CSS/style.css
@@ -199,3 +199,18 @@ section {
 .home-line {
   height: 0.1rem;
 }
+
+/*
+About
+*/
+
+#about-who-are-we img.about-img1 {
+  max-width: 100%;
+  height: auto;
+  max-height: calc(13rem + 7.6vw);
+}
+
+#about-who-are-we .left-grey-triangle {
+  height: auto;
+  max-height: 16rem;
+}
