--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,6 +210,12 @@ About
   max-height: calc(13rem + 7.6vw);
 }
 
+#about-why-us img.about-img2 {
+  max-width: 100%;
+  height: auto;
+  max-height: calc(13rem + 4.6vw);
+}
+
 #about-who-are-we .left-grey-triangle {
   height: auto;
   max-height: 16rem;
