--- a/CSS/style.css
+++ b/CSS/style.css
@@ -216,7 +216,18 @@ About
   max-height: calc(13rem + 4.6vw);
 }
 
+#about-what-we-do img.about-img3 {
+  max-width: 100%;
+  height: auto;
+  max-height: calc(13rem + 7.6vw);
+}
+
 #about-who-are-we .left-grey-triangle {
+  height: auto;
+  max-height: 16rem;
+}
+
+#about-why-us .right-grey-triangle {
   height: auto;
   max-height: 16rem;
 }
