--- a/CSS/style.css
+++ b/CSS/style.css
@@ -201,6 +201,83 @@ section {
 }
 
 /*
+Our expertise animation
+*/
+.magic-border-container {
+  display: inline-block;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.09);
+}
+
+.magic-border-container::before,
+.magic-border-container::after {
+  content: "";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #00e2f9;
+}
+
+span::before,
+span::after {
+  content: "";
+  width: 2px;
+  height: 0;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #00e2f9;
+}
+.magic-border-container:hover::before,
+.magic-border-container:hover::after {
+  width: 100%;
+}
+.magic-border-container:hover span::before,
+.magic-border-container:hover span::after {
+  height: 100%;
+}
+/*----- button 3 -----*/
+/*----- button 3 -----*/
+.magic-border::after {
+  left: 0;
+  bottom: 0;
+  transition-delay: 0.6s;
+}
+.magic-border span::after {
+  transition-delay: 0.4s;
+  right: 0;
+  bottom: 0;
+}
+.magic-border::before {
+  right: 0;
+  top: 0;
+  transition-delay: 0.2s;
+}
+.magic-border span::before {
+  transition-delay: 0s;
+  left: 0;
+  top: 0;
+}
+
+.magic-border:hover::after {
+  transition-delay: 0s;
+}
+.magic-border:hover span::after {
+  transition-delay: 0.2s;
+}
+.magic-border:hover::before {
+  transition-delay: 0.4s;
+}
+.magic-border:hover span::before {
+  transition-delay: 0.6s;
+}
+
+/*
 About
 */
 
