--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,7 +60,18 @@ section {
     color: #14e9ff;
 }
 
+
+/* .navbar-nav>.active>a {
+    color: #14e9ff;
+} */
+
+
+/* 
 .nav-link.active {
+    color: #14e9ff;
+} */
+
+.active {
     color: #14e9ff;
 }
 
@@ -79,6 +90,70 @@ section {
 .menu-li {
     margin-left: auto;
 }
+
+
+/* index page text svg css start */
+
+svg.intro {
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 30px 50px -20px #2e0642;
+}
+
+svg.intro .text {
+    display: none;
+}
+
+svg.intro.go .text {
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    display: block;
+}
+
+svg.intro.go .text-stroke {
+    fill: none;
+    stroke: deeppink;
+    stroke-width: 2.8px;
+    stroke-dashoffset: -900;
+    stroke-dasharray: 900;
+    stroke-linecap: butt;
+    stroke-linejoin: round;
+    animation: dash 2.5s ease-in-out forwards;
+}
+
+svg.intro.go .text-stroke:nth-child(2) {
+    animation-delay: 0.3s;
+}
+
+svg.intro.go .text-stroke:nth-child(3) {
+    animation-delay: 0.9s;
+}
+
+svg.intro.go .text-stroke-2 {
+    stroke: #00e2f9;
+    animation-delay: 1.2s;
+}
+
+svg.intro.go .text-stroke:nth-child(5) {
+    animation-delay: 1.5s;
+}
+
+svg.intro.go .text-stroke:nth-child(6) {
+    animation-delay: 1.8s;
+}
+
+@keyframes dash {
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
+
+
+/* index page text svg css End */
 
 .ff-azonix {
     font-family: Azonix, Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif;
@@ -322,6 +397,11 @@ About
 .accordianSign {
     font-size: 2rem;
     font-family: fantasy;
+}
+
+.footer-icon {
+    width: 24px;
+    margin-right: 20px;
 }
 
 @media screen and (max-width: 992px) {
