--- a/CSS/index.css
+++ b/CSS/index.css
@@ -164,3 +164,47 @@
         left: 0;
     }
 }
+
+h2,
+p {
+    animation-name: content;
+    animation-duration: 800ms;
+    animation-timing-function: ease-in;
+    animation-delay: 1000ms;
+}
+
+@keyframes content {
+    0% {
+        transform: scale(0);
+    }
+    10% {
+        transform: scale(0.1);
+    }
+    20% {
+        transform: scale(0.2);
+    }
+    30% {
+        transform: scale(0.3);
+    }
+    40% {
+        transform: scale(0.4);
+    }
+    50% {
+        transform: scale(0.5);
+    }
+    60% {
+        transform: scale(0.6);
+    }
+    70% {
+        transform: scale(0.7);
+    }
+    80% {
+        transform: scale(0.8);
+    }
+    90% {
+        transform: scale(0.9);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
