--- a/CSS/login.css
+++ b/CSS/login.css
@@ -213,7 +213,7 @@ section#formHolder {
   text-transform: uppercase;
   padding: 5px 30px;
   /* background: #f95959; */
-  color: #000;
+  /* color: #000; */
   border-radius: 30px;
   margin-right: 20px;
   font-family: "Montserrat", sans-serif;
