--- a/CSS/style.css
+++ b/CSS/style.css
@@ -341,7 +341,6 @@ About
     font-size: 3.5rem;
     padding-top: 20px;
   }
-  
 }
 
 @media screen and (max-width: 1000px) {
@@ -349,7 +348,6 @@ About
     font-size: 3.5rem;
     padding-top: 20px;
   }
-  
 }
 
 @media screen and (max-width: 600px) {
@@ -359,7 +357,7 @@ About
   #logo {
     width: 100% !important;
   }
-  
+
   #pink-triangle {
     display: none;
   }
@@ -386,11 +384,11 @@ About
   color: #a1a1a1;
 }
 
-.contact-circle img {
+/* .contact-circle img {
   max-width: 400px;
   height: 350px;
   margin-left: 20%;
-}
+} */
 
 .contact-que img {
   max-width: 400px;
@@ -398,7 +396,6 @@ About
   margin-left: 130px;
   margin-top: 82px;
 }
-
 
 .container.text-center #social .social-icon {
   height: calc(1.5rem + 0.4vw);
