--- a/CSS/service.css
+++ b/CSS/service.css
@@ -1,197 +1,192 @@
-.rpo-sub-services-1-btn img {
-    float: right;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 
-.digital-sub-services-1-btn img {
-    float: right;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-
-.payroll-sub-services-1-btn img {
-    float: right;
+body
+{
+    font-family: 'Poppins', sans-serif;
+    background: black !important;
+    /* background-color: black; */
 }
-
-.training-sub-services-1-btn img {
-    float: right;
-}
-
-.corporate-sub-services-1-btn img {
-    float: right;
-}
-
-.rpo-sub-services-2-btn img {
+.honeycomb
+{
+    display: -webkit-box;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    -webkit-box-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
+    transform: translateY(80px);
 }
 
-.digital-sub-services-2-btn img {
+.honeycomb-cell
+{
+    -webkit-box-flex: 0;
+    flex: 0 1 250px;
+    max-width: 250px;
+    height: 137.5px;
+    margin: 65.4px 12.5px 25px;
+    position: relative;
+    padding: 0.5em;
+    text-align: center;
+    z-index: 1;
+    /* box-shadow: 1px 1px 1px 10px skyblue; */
+}
+.honeycomb-cell_img
+{
+    object-fit: cover;
+    object-position: center;
+    /* filter: (100%); */
+}
+.honeycomb-cell_title
+{
+    height: 100%;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
     justify-content: center;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+    word-break: break-word;
+    text-transform: uppercase;
+    color: black;
+    font-weight: 700;
+    font-size: 1.75em;
+    transition: opacity 350ms;
+}
+.honeycomb-cell_title > small
+{
+    font-weight: 300;
+    margin-top: 0.25em;
+}
+.honeycomb-cell::before,
+.honeycomb-cell::after
+{
+    content: '';
+}
+.honeycomb-cell::before,
+.honeycomb-cell::after,
+.honeycomb-cell_img
+{
+    top: -50%;
+    left: 0;
+    width: 100%;
+    height: 200%;
+    display: block;
+    position: absolute;
+    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    z-index: -1;
+}
+.honeycomb-cell::before
+{
+    background: #fff;
+    transform: scale(1.055);
+}
+.honeycomb-cell::after
+{
+    background: white;
+    opacity: 0.7;
+    transition: opacity 350ms;
+    -webkit-transition: opacity 350ms;
+}
+.honeycomb-cell:hover
+.honeycomb-cell_title
+{
+    opacity: 0;
+ }
+.honeycomb-cell:hover
+.honeycomb-cell_img
+{
+    filter: grayscale(0%);
+}
+.honeycomb-cell:hover::before
+{
+    background: skyblue;
+}
+.honeycomb-cell:hover::after
+{
+    opacity: 0;
+}
+.honeycomb_Hidden
+{
+    display: none;
+    opacity: 0;
+    width: 250px;
+    margin: 0 12.5px;
 }
 
-.payroll-sub-services-2-btn img {
-    justify-content: center;
+/*** Responsive ***/
+
+@media (max-width: 550px)
+{
+    .honeycomb-cell
+    {
+        margin: 81.25px 25px;
+    }
 }
 
-.training-sub-services-2-btn img {
-    justify-content: center;
+
+@media (min-width: 550px) and (max-width: 825px)
+{
+    .honeycomb-cell:nth-child(3n)
+    {
+        margin-right: calc(50% - 125px);
+        margin-left: calc(50% - 125px);
+    }
+
+    .honeycomb_Hidden:nth-child(3n + 5)
+    {
+        display: block;
+    }
 }
 
-.corporate-sub-services-2-btn img {
-    justify-content: center;
-}
 
-.rpo-sub-services-3-btn img {
-    float: left;
-}
+@media (min-width: 825px) and (max-width: 1100px) {
 
-.digital-sub-services-3-btn img {
-    float: left;
-}
+    .honeycomb-cell:nth-child(5n + 4)
+    {
+        margin-left: calc(50% - 275px);
+    }
 
-.payroll-sub-services-3-btn img {
-    float: left;
-}
+    .honeycomb-cell:nth-child(5n + 5)
+    {
+        margin-right: calc(50% - 275px);
+    }
 
-.training-sub-services-3-btn img {
-    float: left;
+    .honeycomb_Hidden:nth-child(5n),
+    .honeycomb_Hidden:nth-child(5n + 3)
+    {
+        display: block;
+    }
 }
+@media (min-width: 1100px)
+{
+    .honeycomb-cell:nth-child(7n + 5) {
+        margin-left: calc(50% - 400px);
+    }
 
-.corporate-sub-services-3-btn img {
-    float: left;
-}
+    .honeycomb-cell:nth-child(7n + 7),
+    .honeycomb-cell:nth-child(7n + 5):nth-last-child(2)
+    {
+        margin-right: calc(50% - 400px);
+    }
 
-.rpo-sub-services-4-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.digital-sub-services-4-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.payroll-sub-services-4-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.training-sub-services-4-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.councelling-sub-services-4-btn img {
-    float: right;
-    position: relative;
-    left: 100px;
-}
-
-.corporate-sub-services-4-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-5-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.digital-sub-services-5-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.payroll-sub-services-5-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.training-sub-services-5-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.councelling-sub-services-5-btn img {
-    float: left;
-}
-.corporate-sub-services-5-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-6-btn img {
-    float: right;
-}
-
-.rpo-sub-services-7-btn img {
-    justify-content: center;
-}
-
-.rpo-sub-services-8-btn img {
-    float: left;
-}
-
-.rpo-sub-services-9-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.digital-sub-services-9-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-10-btn img {
-    position: relative;
-    right: 45px;
-    bottom: 93px;
-}
-
-.digital-sub-services-10-btn img {
-    position: relative;
-    right: 45px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-12-btn img {
-    position: relative;
-    left: 261px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-13-btn img {
-    position: relative;
-    right: 35px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-13-btn img {
-    position: relative;
-    right: 46px;
-    bottom: 93px;
-}
-
-.rpo-sub-services-14-btn img {
-    position: relative;
-    bottom: 180px;
-}
-
-.main-row-2 {
-    position: relative;
-    bottom: 184px;
-}
-
-.main-row-3 {
-    position: relative;
-    bottom: 371px;
+    .honeycomb_Hidden:nth-child(7n + 7),
+    .honeycomb_Hidden:nth-child(7n + 9),
+    .honeycomb_Hidden:nth-child(7n + 11)
+    {
+        display: block;
+    }
 }
